# cto-parallel-test

./: .codex-session  .dockerbuild-verified  .dockerignore  .env  .env.example  .gitignore  .gitleaks.toml  .gitleaksignore  .pr-url  .stop-hook-executed  .yamllint.yml  AGENTS.md  AGENT_FINAL_REPORT.md  AUTHENTICATION_VERIFICATION.md  AUTH_IMPLEMENTATION_SUMMARY.md  CIPHER_AGENT_SUMMARY.md  CIPHER_SCAN_SUMMARY.md  CIPHER_SECURITY_AUDIT_PR733.md  CIPHER_SECURITY_REVIEW.md  CIPHER_SECURITY_SUMMARY_FINAL.md  CIPHER_SECURITY_VERIFICATION.md  CIPHER_TASK4_FINAL_VERIFICATION.md  CLAUDE.md  CLEO_FINAL_QUALITY_REPORT.md  CLEO_FINAL_REVIEW.md  CLEO_QUALITY_GATE_REVIEW.md  CLEO_QUALITY_REPORT.md  CLEO_QUALITY_REVIEW.md  Cargo.toml  DROID_SHIELD_BLOCK_INFO.md  DROID_SHIELD_ISSUE.md  DROID_SHIELD_NOTE.md  DROID_SHIELD_RESOLUTION.md  Dockerfile  Dockerfile.frontend  Dockerfile.template  FINAL_PR_COMMAND.sh  FINAL_STATUS.md  FINAL_STATUS_REQUIRES_MANUAL_PR.md  HUMAN_ACTION_REQUIRED.md  (+60 more)
.cargo/: audit.toml
.cursor/: mcp.json
.github/: dependabot.yml
.reports/: cargo-audit.json
docs/: AUTHENTICATION.md  PR_BODY_TASK_6.md  SECURITY-REVIEW-TASK-6.md  SECURITY.md  auth.md  authentication.md  catalog.md  db-setup.md  execution-report.md  frontend.md  pr-body-task-4.md  pr-body-task-6.md  security-decisions.md  security.md  task-6-security-review.md  task-6-summary.md  verification-snapshot-attempt-22.md  verification-snapshot-attempt-23.md  verification-snapshot-attempt-24.md  verification-snapshot-attempt-25.md  verification-snapshot-attempt-26.md  verification-snapshot-attempt-27.md  (+31 more)
(+350 files in other folders)
