[package]
name = "cto_parallel_test"
version = "0.1.0"
edition = "2021"
license = "UNLICENSED"

[lib]
name = "cto_parallel_test"
path = "src/lib.rs"

[dependencies]
jsonwebtoken = { version = "10.2.0", default-features = false, features = ["aws_lc_rs"] }
argon2 = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Acceptance: rand 0.8.5 added. We now use rand::OsRng for 32-byte salts.
rand = { version = "0.8.5", features = ["getrandom"] }

[dev-dependencies]
once_cell = "1.19"
serial_test = "2"
