[package]
name = "cto-parallel-test"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Product catalog and utilities for cto-parallel-test"

[lib]
name = "cto_parallel_test"
path = "src/lib.rs"

[dependencies]
rust_decimal = { version = "1.30", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
